@@ -34,7 +34,7 @@ requires:
   Getopt::Std: 0
   IO::Barf: 0
   MARC::File::XML: 1.0.4
-  MARC::Validator: 0
+  MARC::Validator: 0.06
   Unicode::UTF8: 0
   perl: 5.6.0
 resources:
