@@ -72,9 +72,10 @@ sub help {
 		$script =~ s/\\/\//msg;
 	}
 	my $help = <<"END";
-Usage: $script [-d] [-h] [-l] [-o output_file] [-p] [-v] [--version] marc_xml_file..
+Usage: $script [-d] [-h] [-i id] [-l] [-o output_file] [-p] [-v] [--version] marc_xml_file..
 	-d		Debug mode.
 	-h		Print help.
+	-i id		Record identifier (default value is 001).
 	-l		List of plugins.
 	-o output_file	Output file (default is STDOUT).
 	-p		Pretty print JSON output.
