@@ -1,4 +1,5 @@
 0.04
+ - Add -i option for definition of record id.
 
 0.03 2025-09-30T17:14:26+02:00
  - Add test for constructor.
